--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: firebase_app
-description: A new Flutter project.
+ame: Linux Application Flutter
+description: Flutter Integration with RHEL and FireBase
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
